# badly-drawn-wizards.github.io

./: .gitignore  LICENSE  archive.html  badly-drawn-wizards.cabal  contact.html  contact.md  cv.html  cv.md  deploy.sh  index.html
css/: coqdoc.css  main.css
src/: Main.hs
templates/: archive.html  default.html  index.html  postlist.html
