name:                badly-drawn-wizards
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Personal blog
homepage:            https://github.com/reuben364/badly-drawn-wizards#readme
author:              Reuben Steenekamp
maintainer:          reuben.steenekamp@gmail.com
copyright:           2017 Reuben Steenekamp
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable badly-drawn-wizards
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hakyll >= 4.9 && < 4.10
                     , filepath >= 1.4 && < 1.5
                     , process >= 1.4 && < 1.5
                     , strict >= 0.3 && < 0.4
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/reuben364/badly-drawn-wizards
